
VERSION "4.3.91"
correction to -h (convert) option
silenced a few compilation error warnings

VERSION "4.3.90"

added note name output to midi-dump.

VERSION "5.3.89"

VERSION "4.3.88"
fix lute.mf to make spanish "perfect" time sig work again

VERSION "4.3.87"
add  after-ornaments to the flag line
fixed a bug in the print size of 1200dpi PS 

VERSION "4.3.86"
fix ^03 error where the caret shoed up in the final document
Also fix tie at flag level

VERSION "4.3.85"
add SPANISH for music and score conversion or numeric spanish tab

VERSION "4.3.84"  January 9 2015
fix score for the N10 character

VERSION "4.3.83"  September 8 2014
fix del signe \0376  and added file name to midi file in -midi
fix ^ ornament after e

VERSION "4.3.82"   April 28 2014
try and handle the funny quotes an dashes that Apple Mac TextEdit puts into a file
without asking.

VERSION "4.3.81"   April 18 2014
added some padding for the x prefix ornament in pass1.cc

VERSION "4.3.80"  Nov 20 2013
declared main as int for apple's new compiler
other changes to avoid apple compiler warnings

VERSION "4.3.79"
added a new character, a '/. for strum. use "q" for it.  
Also $extended_character_set to print q-v rather than the ornament
also, modifiet tfm.cc to allow for an apparently new header format
emitted by mf, which omits the name and coding scheme
also added -curly-e for baroque tablature - I though I already had this ??

VERSION "4.3.78"
added a warning when a double quote is used at the end of the line
with nothing to quote
	
VERSION "4.3.77"
allow negative value for $sys-skip
new variable, $top_margin , takes points.

VERSION "4.3.76"  jan 2012
volume control for MIDI, fix for Mesngeau fourish and midi

VERSION "4.3.75"  May 29 2011
fix thick bar for four and five bar staves
make 4 and 5 staff lines work with -h ital to french conversion
(makes them work for whole file)

VERSION "4.3.74"  April 11 2011
fix cewnterline, broken in last title.cc fix

VERSION "4.3.73"  Feb 21 2011