@@ -367,8 +367,8 @@ int main(int argc, char **argv)
     //  dbg_set(Fonts);
     
     if ( ! (f.m_flags & QUIET) )
-      dbg2(Warning, "tab %s copyright 1995-2010 by Wayne Cripps%c",
-	   (void *)VERSION,
+      dbg2(Warning, "tab %s copyright 1995-2018 by Wayne Cripps%c",
+	   (void *) VERSION,
 	   (void *) NEWLINE );
     
     file_stuff(&b, &f);
