@@ -21,7 +21,7 @@ midi_snd::midi_snd()
   buffer = new i_buf();
   midi_head();
   count = 0;
-  sprintf(s, "tab %s copyright 1995-2014 by Wayne Cripps",  VERSION);
+  sprintf(s, "tab %s copyright 1995-2018 by Wayne Cripps",  VERSION);
   text(Copyright, s);
   text(Text, "converted by TAB");
   instmnt = 0;
@@ -38,7 +38,7 @@ midi_snd::midi_snd(const unsigned int instrument, const unsigned int volume,
   buffer = new i_buf();
   midi_head();
   count = 0;
-  sprintf(s, "tab %s copyright 1995-2014 by Wayne Cripps",  VERSION);
+  sprintf(s, "tab %s copyright 1995-2018 by Wayne Cripps",  VERSION);
   text(Copyright, s);
   text(Text, "converted by TAB");
   text(Text, infile);
@@ -59,7 +59,7 @@ midi_snd::midi_snd(const unsigned int instrument,
   buffer = new i_buf();
   midi_head();
   count = 0;
-  sprintf(s, "tab %s copyright 1995-2014 by Wayne Cripps",  VERSION);
+  sprintf(s, "tab %s copyright 1995-2018 by Wayne Cripps",  VERSION);
   text(Copyright, s);
   text(Text, "converted by TAB");
   text(Text, infile);
