@@ -3,6 +3,8 @@
 %-spanish
 -ff
 -R9
+$flagstyle=3Dthin
+
 
 b
 0  3235
