@@ -2,6 +2,8 @@
 VERSION "4.3.91"
 correction to -h (convert) option
 silenced a few compilation error warnings
+in $arg=val allow for quoted-printable $arg=3Dval
+made additions to get_tab_file to handle CContent statements in the file
 
 VERSION "4.3.90"
 
